to remove whitespace and fixed card

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -95,15 +95,16 @@ input[type=date]:invalid::-webkit-datetime-edit {
 .group:hover .tooltip-text {
   opacity: 1; /* Show the tooltip on hover */
   visibility: visible; /* Make it visible */
-
-  transform: translateX(-50%) translateY(-5px); }/* Slight upward movement */
-
-  
-
   transform: translateX(-50%) translateY(-5px); /* Slight upward movement */
 }
 
 .border-input{
   border: 1px solid #EAE5FF !important ;
 
+}
+
+/* in dashboard2 to remove default cancel or clear icon */
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
 }
